--- a/arch/arm64/configs/cybertron_payton_defconfig
+++ b/arch/arm64/configs/cybertron_payton_defconfig
@@ -396,6 +396,7 @@ CONFIG_THERMAL_TSENS8974=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_QCOM_THERMAL_LIMITS_DCVS=y
+CONFIG_MSM_THERMAL_SIMPLE=y
 CONFIG_MMI_SYS_TEMP=y
 CONFIG_GENERIC_ADC_THERMAL=y
 CONFIG_MFD_CS47L35=y
