Revert "lake: overclock CPU To 2.45Ghz"
This reverts commit a8070434b162e83d417152cebf388b63c89b5620.

--- a/arch/arm/boot/dts/qcom/sdm636.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm636.dtsi
@@ -39,6 +39,27 @@
 			/delete-node/ port@4;
 		};
 	};
+
+	devfreq_memlat_4: qcom,arm-memlat-mon-4 {
+		qcom,core-dev-table =
+		< 300000 572 >,
+		< 1113600 762 >,
+		< 1401600 3879 >,
+		< 1958400 5931 >,
+		< 2208000 6881 >;
+	};
+
+	devfreq_cpufreq: devfreq-cpufreq {
+		mincpubw-cpufreq {
+			cpu-to-dev-map-4 =
+			        < 300000 572 >,
+				< 1113600 762 >,
+				< 1401600 2086 >,
+				< 1747200 2929 >,
+				< 1958400 3879 >,
+				< 2208000 6881 >;
+		};
+	};
 };
 
 &soc {
